# repo_helper_rtd

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs_test_action.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  api.rst  conf.py  contributing.rst  index.rst  license.rst  requirements.txt  usage.rst
doc-source/_templates/sidebar/: navigation.html
doc-source/api/: repo_helper_rtd.rst
repo_helper_rtd/: __init__.py  cli.py  options.py
