[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "repo_helper_rtd"
version = "0.1.0"
description = "Manage ReadTheDocs documentation with repo-helper."
readme = "README.rst"
keywords = [ "rtd", "readthedocs", "repo-helper",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[tool.importcheck]

[tool.mkrecipe]
conda-channels = [ "repo-helper",]
extras = "all"
license-key = "MIT"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/repo_helper_rtd"
"Issue Tracker" = "https://github.com/repo-helper/repo_helper_rtd/issues"
"Source Code" = "https://github.com/repo-helper/repo_helper_rtd"
Documentation = "https://repo_helper_rtd.readthedocs.io/en/latest"

[project.entry-points."repo_helper.command"]
repo_helper_rtd = "repo_helper_rtd.cli:rtd"
